Fix icon alignment in help page

--- a/help/help.css
+++ b/help/help.css
@@ -8,4 +8,5 @@ body.help p {
 }
 body.help p .material-icons {
   font-size: inherit;
+  vertical-align: middle;
 }
